--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,7 +1,8 @@
 
 .custom-navbar {
-  background: linear-gradient(135deg, #127aba, #3dbad3); /* baby blue gradient */
+  background: linear-gradient(135deg, #127aba, #3dbad3); 
 }
+
 
 .custom-navbar .nav-link {
   position: relative;
@@ -16,18 +17,22 @@
   bottom: -3px;
   width: 0;
   height: 2px;
-  background-color: #d1ecf1; /* light cyan underline */
+  background-color: #d1ecf1; 
   transition: width 0.3s ease;
 }
 
 .custom-navbar .nav-link:hover {
-  color: #d1ecf1; /* text color changes smoothly */
+  color: #d1ecf1;
 }
 
 .custom-navbar .nav-link:hover::after {
-  width: 100%; /* animate underline */
+  width: 100%;
 }
 
 .custom-container{
-    background: linear-gradient(135deg, #094b74, #3dbad3); /* baby blue gradient */
+    background: linear-gradient(135deg, #094b74, #3dbad3); 
+}
+
+.footer {
+  background: linear-gradient(135deg, #127aba, #3dbad3); 
 }
